--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node app.js",
-    "debug": "node-dev app.js"
+    "debug": "PORT=9700 node-dev app.js"
   },
   "author": "Uchenna Chilaka <uche.chilaka@gmail.com>",
   "repository": {
@@ -14,7 +14,13 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "fs": "^0.0.1-security",
+    "morgan": "^1.9.0",
+    "path": "^0.12.7",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "rotating-file-stream": "^1.3.2"
   },
   "devDependencies": {
     "mocha": "^4.0.1",
