--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "fs": "^0.0.1-security",
     "morgan": "^1.9.0",
